<resources>
    <string name="app_name">ODP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ODP</string>
    <string name="nav_header_subtitle">https://github.com/SeaMyC/ODP</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="dialog_keep_bg_in_phone">是否保存图片到手机？</string>
    <string name="comment_sure">确定</string>
    <string name="comment_cancel">取消</string>
    <string name="user_header_logo">头像</string>
    <string name="user_name">昵称</string>
    <string name="user_email">邮箱地址</string>
    <string name="user_more">更多</string>
    <string name="user_location">我的地址</string>
</resources>
