<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="@dimen/dp_10"
        tools:ignore="MissingConstraints,ContentDescription">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/user_header_logo"
            android:textColor="@color/Black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="@+id/iv_user"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/iv_user_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_20"
            android:src="@drawable/ic_tag"
            app:layout_constraintBottom_toBottomOf="@+id/iv_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iv_user"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/iv_user"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            app:cardCornerRadius="@dimen/dp_5"
            app:layout_constraintRight_toLeftOf="@id/iv_user_tag"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/user_line"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/iv_user"/>

        <TextView
            android:id="@+id/tv_name_str"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/user_name"
            android:textColor="@color/Black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_line"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_20"
            android:drawableEnd="@drawable/ic_tag"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/gray"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="@+id/tv_name_str"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/name_line"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_str"/>

        <TextView
            android:id="@+id/tv_email_str"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/user_email"
            android:textColor="@color/Black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/name_line"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_20"
            android:drawableEnd="@drawable/ic_tag"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/tv_email_str"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/more_line"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_str"/>

        <TextView
            android:id="@+id/tv_more_str"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/user_more"
            android:textColor="@color/Black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/more_line"/>

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_20"
            android:drawableEnd="@drawable/ic_tag"
            android:gravity="center"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/tv_more_str"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:background="#1BD4D6D6"
            app:layout_constraintTop_toBottomOf="@id/tv_more"/>

        <TextView
            android:layout_marginBottom="@dimen/dp_10"
            android:id="@+id/tv_location_str"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/user_location"
            android:textColor="@color/Black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space"/>

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_20"
            android:drawableEnd="@drawable/ic_tag"
            android:gravity="center"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/tv_location_str"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
